drobne zmiany wstęp

--- a/thesis/tex/intro.tex
+++ b/thesis/tex/intro.tex
@@ -1,10 +1,10 @@
 \chapter{Wstęp}
 \section{Wprowadzenie}
-Sztuczna inteligencja to dziedzina wywodząca się z informatyki. Jej początki sięgają lat pięćdziesiątych XX wieku. Jeden z pierwszych badaczy,  John McCarthy, określił sztuczną inteligencję jako ,,naukę i technikę tworzącą inteligentne maszyny''. Pomimo zmian, jakie dokonały się w przeciągu kolejnych 60 lat, definicję tą wciąż można uznać za aktualną. Sztuczna inteligencja obejmuje kilka zagadnień, między innymi logikę rozmytą, sieci neuronowe czy planowanie \cite{ai}.
+Sztuczna inteligencja to dziedzina wywodząca się z informatyki. Jej początki sięgają lat pięćdziesiątych XX wieku. Jeden z pierwszych badaczy,  John McCarthy, określił sztuczną inteligencję jako ,,naukę i technikę tworzącą inteligentne maszyny''. Pomimo zmian, jakie dokonały się w przeciągu kolejnych 60 lat, definicję tę wciąż można uznać za aktualną. Sztuczna inteligencja obejmuje kilka zagadnień, między innymi logikę rozmytą, sieci neuronowe czy planowanie \cite{ai}.
 
 Automatyczne planowanie jest dziedziną sztucznej inteligencji, która zajmuje się realizacją sekwencji akcji oraz strategii \cite{planning}. Innymi słowy, zadaniem automatycznego planowania jest takie pokierwanie akcjami, by ze stanu początkowego dotrzeć do określonego stanu końcowego (celu). Najczęściej wymagany jest również jak najmniejszy czas lub koszt wykonania ułożonego planu. Istnieje kilka powszechnie znanych języków formalnych, umożliwiających wyrażanie problemu automatycznego planowania. Najbardziej znane języki to STRIPS (\textit{Stanford Research Institute Problem Solver}) \cite{strips} oraz PDDL (\textit{Planning Domain Definition Language}) \cite{pddl}, na którym opiera się projekt będący przedmiotem niniejszej pracy.
 	
-Język PDDL jest jednym z wyspecjalizowanych języków służących do opisu zagadnień związanych z automatycznym planowaniem. Został stworzony z przeznaczeniem na międzynarodowy konkurs planistyczny (IPC - \emph{International Planning Competition \footnote{http://ipc.icaps-conference.org/}}), mający miejsce w 1998 roku. Wzorowany był na innych językach wyspecjalizowanych w automatycznym planowaniu, między innymi na STRIPS'ie. W niektórych częściach języka PDDL można dostrzec podobieństwo do jego wzorca (na przykład w definiowanych akcjach), jednakże posiada on odmienną składnię.   
+Język PDDL jest jednym z wyspecjalizowanych języków służących do opisu zagadnień związanych z automatycznym planowaniem. Został utworzony z przeznaczeniem na międzynarodowy konkurs planistyczny (IPC - \emph{International Planning Competition \footnote{http://ipc.icaps-conference.org/}}), mający miejsce w 1998 roku. Wzorowany był na innych językach wyspecjalizowanych w automatycznym planowaniu, między innymi na STRIPS'ie. W niektórych częściach języka PDDL można dostrzec podobieństwo do jego wzorca (na przykład w definiowanych akcjach), jednakże posiada on odmienną składnię.   
 
 W celu wydajnego tworzenia oprogramowania, programiści korzystają z rozmaitych narzędzi. Zdarza się jednak, że samo ich wyszukiwanie i instalacja w systemie operacyjnym, zajmuje więcej czasu niż stworzenie programu. Rozwiązaniem są środowiska programistyczne, zapewniające w większości przypadków podstawowe funkcjonalności, oraz możliwość łatwego wyszukiwania i komponowania potrzebnych narzędzi.
 
