--- a/thesis/tex/bibliography.tex
+++ b/thesis/tex/bibliography.tex
@@ -1,37 +1,39 @@
 
 \begin{thebibliography}{1}
 
-
-\bibitem{adl} Michael Gelfond, Vladimir Lifschitz, \emph{Action Languages} Linköping Electronic Articles in
+\bibitem{compilersEN}Aho A. et al., \emph{Compilers: principles,
+techniques, and tools} Pearson Education, 2007.
+\bibitem{compilers} Aho A. i inni, \emph{Kompilatory. Reguły, metody i narzędzia}.
+WNT, 2001.
+\bibitem{eclipseplugins} Clayberg E., Rubel D., \emph{Eclipse Plug-Ins (3 ed.)}. Addison-Wesley Professional, 2008. 
+\bibitem{webpddl} Dou D., \emph{The Formal Syntax and Semantics of Web-PDDL} Dostępne w: http://aimlab.uoregon.edu/web-pddl.pdf [Dostęp: 18.01.2014]
+\bibitem{strips} Fikes R. E., Nilsson N. J. , \emph{Strips: A new approach to the application of theorem proving to problem solving.} International Joint Conferences on Artificial Intelligence, 1971.
+\bibitem{pddlplus} Fox M., Long D., \emph{PDDL+ : Modelling Continuous Time-dependent Effects}. Dostępne w: http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.15.5965 \&{}rep=rep1\&{}type=pdf [Dostęp: 18.01.2014]
+\bibitem{npdl} Frank J., Jonsson A., \emph{Constraint-based Attribute and Interval Planning.} 2002. Dostępne w:
+http://ti.arc.nasa.gov/m/pub-archive/313h/0313\%20\%28Frank\%29.pdf [Dostęp: 18.01.2014] 
+\bibitem{eclipseinaction} Gallardo D. et al., \emph{Eclipse in Action: A Guide for the Java Developer}, Chapter 8,9, Manning, 2003.
+\bibitem{adl} Gelfond M., Lifschitz V., \emph{Action Languages} Linköping Electronic Articles in
 Computer and Information Science
 Vol. 3(1998): nr 16. Dostępne w http://citeseerx.ist.psu.edu/viewdoc/download?doi= 10.1.1.146.4665\&{}rep=rep1\&{}type=pdf [Dostęp 15.01.2014]
-\bibitem{eclipsearticle}Kim Moir, \emph{The Architecture of Open Source Application}, Dostępne w http://www.aosabook.org/en/eclipse.html [Dostęp: 19.01.2014]
-\bibitem{ai} Stuart Russell, Peter Norvig, \emph{Artificial Intelligence: A
+\bibitem{pddl} Ghallab M. et al., \emph{PDDL -- The Planning Domain Definition Language. Version 1.2}.
+AIPS Conference, 1998.
+\bibitem{fdalgorytm} Helmert M., \emph{The Fast Downward Planning System}. Journal of Artifcial Intelligence Research 26 (2006), str. 191-246. Dostępne w: https://www.jair.org/media/1705/live-1705-2731-jair.pdf [Dostęp: 18.01.2014]
+\bibitem{satplan} Kautz H., \emph{SATPLAN04: Planning as Satisfiability.} 1992. Dostępne w:
+http://www.tzi.de/~edelkamp/ipc-4/Proc/satplan04.pdf [Dostęp: 18.01.2014]
+\bibitem{pddl3.1} Kovacs D. L. , \emph{Complete BNF description of PDDL 3.1 (completely corrected).} 2011. Dostępny w: http://www.plg.inf.uc3m.es/ipc2011-deterministic/attachments/OtherContributions/kovacs-pddl-3.1-2011.pdf [Dostęp: 18.01.2014]
+\bibitem{opt} McDermott D., \emph{OPT Manual.} 2005. Dostępny w: http://www.cs.yale.edu/homes/dvm/papers/opt-manual.pdf [Dostęp: 18.01.2014]
+\bibitem{eclipsearticle} Moir K., \emph{The Architecture of Open Source Application}, Dostępne w http://www.aosabook.org/en/eclipse.html [Dostęp: 19.01.2014]
+\bibitem{antlr}Parr T., \emph{The Definitive ANTLR Reference. Building Domain-Specific Languages}. 
+The Pragmatic Bookshelf, 2007.
+\bibitem{ai} Russell S., Norvig P., \emph{Artificial Intelligence: A
 Modern Approach (2nd ed.)}, Upper Saddle River, New Jersey: Prentice Hall, 2003.
 ISBN 0-13-790395-2
-\bibitem{compilersEN}A. Aho et al., \emph{Compilers: principles,
-techniques, and tools} Pearson Education, 2007.
-\bibitem{pddl3.1}Daniel L. Kovacs, \emph{Complete BNF description of PDDL 3.1 (completely corrected).} 2011. Dostępny w: http://www.plg.inf.uc3m.es/ipc2011-deterministic/attachments/OtherContributions/kovacs-pddl-3.1-2011.pdf [Dostęp: 18.01.2014]
-\bibitem{npdl} Jeremy Frank, Ari Jonsson, \emph{Constraint-based Attribute and Interval Planning.} 2002. Dostępne w:
-http://ti.arc.nasa.gov/m/pub-archive/313h/0313\%20\%28Frank\%29.pdf [Dostęp: 18.01.2014] 
-\bibitem{antlr}T.~Parr, \emph{The Definitive ANTLR Reference. Building Domain-Specific Languages}. 
-The Pragmatic Bookshelf, 2007.
-\bibitem{eclipseinaction} David Gallardo et al., \emph{Eclipse in Action: A Guide for the Java Developer}, Chapter 8,9, Manning, 2003.
-\bibitem{eclipseplugins}E.~Clayberg, D.~Rubel, \emph{Eclipse Plug-Ins (3 ed.)}. Addison-Wesley Professional, 2008. 
-\bibitem{fdalgorytm} Malte Helmert, \emph{The Fast Downward Planning System}. Journal of Artifcial Intelligence Research 26 (2006), str. 191-246. Dostępne w: https://www.jair.org/media/1705/live-1705-2731-jair.pdf [Dostęp: 18.01.2014]
-\bibitem{webpddl} Dejing Dou, \emph{The Formal Syntax and Semantics of Web-PDDL} Dostępne w: http://aimlab.uoregon.edu/web-pddl.pdf [Dostęp: 18.01.2014]
-\bibitem{compilers}A. Aho i inni, \emph{Kompilatory. Reguły, metody i narzędzia}.
-WNT, 2001.
-\bibitem{opt} Drew McDermott, \emph{OPT Manual.} 2005. Dostępny w: http://www.cs.yale.edu/homes/dvm/papers/opt-manual.pdf [Dostęp: 18.01.2014]
-\bibitem{planning} I.Vlahavas, I.Refanidis, \emph{Planning and Scheduling.} Dostępny w: http://www.eetn.gr/index.php/eetn-publications/ai-research-in-greece/planning-and-scheduling [Dostęp: 18.01.2014]
-\bibitem{pddl}M. Ghallab et al., \emph{PDDL -- The Planning Domain Definition Language. Version 1.2}.
-AIPS Conference, 1998.
-\bibitem{pddlplus} Maria Fox, Derek Long, \emph{PDDL+ : Modelling Continuous Time-dependent Effects}. Dostępne w: http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.15.5965 \&{}rep=rep1\&{}type=pdf [Dostęp: 18.01.2014]
-\bibitem{ppddl} Hakan L. S. Younes, Michael L. Littman, \emph{PPDDL1.0: An Extension to PDDL for Expressing
+\bibitem{planning} Vlahavas I., Refanidis I., \emph{Planning and Scheduling.} Dostępny w: http://www.eetn.gr/index.php/eetn-publications/ai-research-in-greece/planning-and-scheduling [Dostęp: 18.01.2014]
+\bibitem{ppddl} Younes H. L. S., Littman M. L., \emph{PPDDL1.0: An Extension to PDDL for Expressing
 Planning Domains with Probabilistic Effects.} 2004. Dostęp w: http://reports-archive.adm.cs.cmu.edu/anon/2004/CMU-CS-04-167.pdf [Dostęp: 18.01.2014]
-\bibitem{satplan} Henry Kautz, \emph{SATPLAN04: Planning as Satisfiability.} 1992. Dostępne w:
-http://www.tzi.de/~edelkamp/ipc-4/Proc/satplan04.pdf [Dostęp: 18.01.2014]
-\bibitem{strips} Richard E. Fikes, Nils J. Nilsson, \emph{Strips: A new approach to the application of theorem proving to problem solving.} International Joint Conferences on Artificial Intelligence, 1971.
+
+
+
 
 
 
